deployment/deployment.yaml
# Creating MLflow deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codif-ape-graph-rag-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codif-ape-graph-rag-api-deployment
  template:
    metadata:
      labels:
        app: codif-ape-graph-rag-api-deployment
    spec:
      containers:
        - name: codif-ape-graph-rag-api
          image: meilametayebjee/codification-ape-graph-rag-api:cd
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 30000m
              memory: 50Gi
            requests:
              cpu: 100m
              memory: 2Gi
