deployment/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: codif-ape-graph-rag-fastapi-service
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 500
      protocol: TCP
      name: http
  selector:
    app: codif-ape-graph-rag
