deployment/service-webapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: codif-ape-graph-rag-streamlit-service
spec:
  type: ClusterIP
  ports:
    - port: 8501
      targetPort: 8501
      protocol: TCP
      name: http
  selector:
    app: codif-ape-graph-rag
