deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codif-ape-graph-rag-api-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: codif-ape-graph-rag-api-deployment
